--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/vgs/679dbff8-cfe1-42a2-b884-0dd4ef2dade9'>Very Good Security - Middle Software Engineer (Vault)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/wellist/jobs/4503452002'>Job Application for Sr. Software Engineer at Wellist</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -47,7 +51,7 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/agoda/jobs/1937117'>Job Application for Senior Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
+<h5><a href='https://boards.greenhouse.io/agoda/jobs/1937117'>Job Application for Senior Software Engineer - Big Data/Machine Learning at Agoda</a></h5> 
 <p><span class="badge badge-light">Singapore  Singapore  Singapore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -167,7 +171,7 @@
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/3mnyo9otg71mzie1mr6po7n8do'>Senior Software Engineer | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Reston, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -261,7 +265,7 @@
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -303,7 +307,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pexapark.join.com/jobs/473704-software-engineer'>Job @ Pexapark (Z?rich): Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -311,7 +315,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -319,7 +323,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.orizon.de/de/job/software-developer-simulator-m-f-d-manching-11995'>Software Developer Simulator (m/f/d) in Manching - Orizon GmbH</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.orizon.de/de/job/software-developer-simulator-m-f-d-manching-11995'>Software Developer Simulator (m/f/d) in Manching - Orizon GmbH</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -351,7 +355,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698613809-embedded-software-developer-sr-'>Bosch Group Embedded Software Developer Sr. | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -371,7 +375,7 @@
 <p><span class="badge badge-light">Seattle, Washington  San Francisco, California  Chicago, Illinois  St. Louis, Missouri</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/servicenow/job/oGYrbfw0'>ServiceNow Careers - Staff Software Engineer - Quality Engineering</a></h5> 
+<h5><a href='https://jobs.jobvite.com/servicenow/job/oGYrbfw0'>ServiceNow Careers - Staff Software Engineer - Quality Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,10 +440,6 @@
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601455-software-engineer'>Renaissance Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Renaissance/743999698601585-senior-software-engineer'>Renaissance Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
